rule-edit: new filters (from is.in.file [FILENAME]) / (to is.in.file [FILENAME])
appid-enable: introduce new script to enable APP-IDs which are set to disabled - directly against panorama or via panorama to all connected firewalls on panorama
pan-diff: extend with API input - to easily compare running and candidate config
tag-edit: new actions=exporttoexcel:[filename]

utils(under development):
ike: new script to show all IKE/IPsec profile and config settings
interface: new script to show interface settings
routing: new script to show route settings
vsys: new script to show all vsys
vwire: new script to show vwire settings
zone: new script to show zone settings

bugfix:
- fix class-IpsecTunnel | related to proxy-id if <protocol> is not available
- fix class-EthernetInterfaceStore | xpath fix
- fix implementation of class-AggregateEthernetInterface
- fix class-VirtualSystem | no warning if IPv4 address without netmask is used as interface IP
- fix class-QosRule - fix access type related to app 'filter=(app is.any)'
- fix error output for XMLline - correct lineNo if lineNo > 65535
- fix class-authenticationRule |  fix for FW config - typos related to XML xpath finding
- fix class-IkeCryptoProfileStore | -IKEGateway | -IKEGatewayStore | -IPsecCryptoProfileStore | -IPsecTunnel | -IPsecTunnelStore || improve data handling during script execution
- fix class-VirtualRouter | fix if object not found for getting the interface IP
- fix description field for rules and objects was increased to 1023 characters with PAN-OS 7.1 | update all relevant places
- fix class-AddressRuleContainer - improve setAny, offline config file has now any as correct entry
- fix rule 'filter=(rule is.unused.fast)' for PAN-OS version > 8.1
- fix address-merger - duplicate FQDN are now also covered
- fix address-merger - for location=shared | if config is panos
- fix service-edit - action=rename, if service is tmp (e.g. service is from Panorama DG)

1.5.14 (20180227)